# ComfyUI-Smart-Prompt-Architect

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANUAL.md  README.md  SECURITY.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  DEVELOPMENT.md  architecture.md  catalog-compatibility.md  catalog-metrics.md  catalog-v2.md  configuration.md  content-safety.md  creating-packs.md  data-loading.md  determinism.md  generated-examples.md  generation-modes.md  manifest.md  official-profiles.md  rendering.md  rules.md
examples/: README.md
plans/: PLAN0-STATUS.md  PLAN0.md
prompt_architect/: __init__.py  extension.py  version.py
prompt_architect/application/: __init__.py  compose_service.py  preview_api.py
prompt_architect/comfy/: __init__.py  errors.py  nodes.py  routes.py  schemas.py
prompt_architect/data/: README.md
prompt_architect/domain/: __init__.py  engine.py  enums.py  exceptions.py  manifest.py  models.py  normalizer.py  parser.py  renderer.py  rules.py  seeds.py  selector.py  validator.py
prompt_architect/infrastructure/: __init__.py  cache.py  hashing.py  json_loader.py  paths.py  repository.py
prompt_architect/web/: README.md  setup_library.js  (+5 more)
reports/: catalog-metrics.json
scripts/: __init__.py  audit_wildcards.py  benchmark.py  catalog_stats.py  find_catalog_duplicates.py  generate_catalog.py  validate_catalog_semantics.py  validate_data.py
tests/: __init__.py  property_profiles.py  test_catalog_v2.py  test_comfy_schema.py  test_composition.py  test_engine.py  test_official_data.py  test_package.py  test_parser.py  test_preview_api.py  test_renderer.py  test_repository.py  test_rules.py  test_selection.py
(+138 files in other folders)
