[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-prompt-architect"
version = "0.1.0.dev0"
description = "Deterministic structured prompt composition for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Prompt Architect contributors" }]
keywords = ["comfyui", "prompt", "deterministic", "custom-node"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["prompt_architect*"]

[tool.setuptools.package-data]
prompt_architect = [
    "data/**/*.json",
    "web/**/*.css",
    "web/**/*.js",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "S", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S311"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["prompt_architect", "tests"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["prompt_architect"]

[tool.coverage.report]
show_missing = true
skip_covered = true
